--- a/gradle.properties
+++ b/gradle.properties
@@ -16,9 +16,9 @@
 APP_VERSION_CODE=4228
 APP_VERSION_NAME=10.5.0
 APP_PACKAGE=org.telegram.messenger
-RELEASE_KEY_PASSWORD=android
-RELEASE_KEY_ALIAS=androidkey
-RELEASE_STORE_PASSWORD=android
+RELEASE_KEY_PASSWORD=sereno
+RELEASE_KEY_ALIAS=map_flow
+RELEASE_STORE_PASSWORD=sereno
 org.gradle.jvmargs=-Xmx4096M -XX:MaxPermSize=4096m
 org.gradle.daemon=true
 org.gradle.parallel=true
@@ -26,3 +26,5 @@ org.gradle.configureondemand=false
 android.useAndroidX=true
 android.enableJetifier=true
 android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
